classDiagram
    class User {
        +Long userId
        +String email
        +String passwordHash
        +String firstName
        +String lastName
        +LocalDateTime registrationDate
        +LocalDateTime lastLoginDate
        +Boolean isActive
        +login() Boolean
        +logout() void
        +updateProfile() void
        +changePassword() Boolean
    }
    
    class Member {
        +Integer currentBorrowCount
        +Integer currentReservationCount
        +Double totalPenalties
        +LocalDateTime lastWarningDate
        +borrowBook() Loan
        +reserveBook() Reservation
        +returnBook() ReturnRecord
        +renewBook() Renewal
        +payPenalty() void
        +viewBorrowHistory() List
        +addToReadingList() void
    }
    
    class Admin {
        +addBook() Book
        +updateBook() void
        +deleteBook() void
        +manageCopies() void
        +viewMemberProfile() Member
        +generateReport() Report
        +viewOverdueBooks() List
        +markPenaltyPaid() void
        +deleteInactiveMember() void
    }
    
    class UserSession {
        +String sessionId
        +Long userId
        +LocalDateTime createdAt
        +LocalDateTime lastAccessTime
        +Boolean rememberMe
        +LocalDateTime expiresAt
        +validateSession() Boolean
        +refreshSession() void
        +terminateSession() void
    }
    
    class Notification {
        +Long notificationId
        +Long userId
        +String type
        +String title
        +String message
        +LocalDateTime createdAt
        +Boolean isRead
        +Boolean emailSent
        +markAsRead() void
        +sendEmail() void
    }
    
    class ActivityLog {
        +Long logId
        +Long adminId
        +String action
        +String targetEntity
        +String details
        +LocalDateTime timestamp
        +String ipAddress
    }
    
    User <|-- Member
    User <|-- Admin
    User "1" --> "0..*" UserSession
    User "1" --> "0..*" Notification
    Admin "1" --> "0..*" ActivityLog
    Member "1" --> "0..*" Loan
    Member "1" --> "0..*" Reservation
    Member "1" --> "0..*" ReadingListItem
    User "1" --> "0..*" BookSearch